--- a/CSS_Practice/grid.css
+++ b/CSS_Practice/grid.css
@@ -6,6 +6,7 @@
 }
 
 .parent {
+  margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(4, auto);
   /* grid-template-rows: repeat(4, auto); */
@@ -29,36 +30,39 @@
   grid-column: 2 / 5;
 }
 
+/* Website */
+
 .child1 {
   background-color: lightgrey;
   border: 1px solid black;
   font-size: 20px;
   text-transform: capitalize;
-  text-align: center;
   padding: 24px;
 }
 
 #website {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(8, auto);
   /* grid-template-rows: repeat(10, auto); */
   gap: 2px;
+  /* grid-area: 20px 40px 60px 80px; */
 }
 
 #header {
-  grid-column: 1/5;
-  padding: 35px;
-}
-
-#sidePanel {
-  /* grid-row: 2 / span 5; */
+  grid-column: 1/9;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 30px;
 }
 
 #main {
-  grid-column: 2/4;
+  grid-column: 2/8;
+  text-align: center;
 }
 
 #footer {
-  grid-column: 1/5;
-  padding: 35px;
+  grid-column: 1/9;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 30px;
 }
