--- a/NodeWithTS_Practice/socialMediaApi/public/style.css
+++ b/NodeWithTS_Practice/socialMediaApi/public/style.css
@@ -114,3 +114,81 @@ main {
   border-radius: 4px;
   cursor: pointer;
 }
+
+/* =-------------------------------------------------------------------= */
+
+/* Navigation Bar */
+.nav-buttons {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 50px 0;
+}
+
+.nav-buttons button {
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.nav-buttons button.active {
+  background-color: #357ab7;
+}
+
+.nav-buttons button:hover {
+  background-color: #357ab7;
+  transform: scale(1.05);
+}
+
+/* Post Container */
+.post-container {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  padding: 20px;
+  max-width: 600px;
+}
+
+.post-container h3 {
+  color: #4a90e2;
+}
+
+/* Create Post Form */
+#create-post-form {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 600px;
+  margin: 20px auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#create-post-form textarea {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+#create-post-form button {
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#create-post-form button:hover {
+  background-color: #357ab7;
+}
