--- a/NodeWithTS_Practice/socialMediaApi/public/style.css
+++ b/NodeWithTS_Practice/socialMediaApi/public/style.css
@@ -56,7 +56,7 @@ header nav button:hover {
 }
 
 .form-container input {
-  width: 100%;
+  width: 92%;
   padding: 0.8rem;
   margin-bottom: 1rem;
   border-radius: 4px;
@@ -85,7 +85,7 @@ header nav button:hover {
 /* Main Content */
 main {
   width: 90%;
-  max-width: 600px;
+  max-width: 1000px;
   margin: 2rem auto;
   text-align: center;
 }
@@ -113,6 +113,11 @@ main {
   padding: 0.5rem 1rem;
   border-radius: 4px;
   cursor: pointer;
+  margin-right: 12px;
+}
+
+.post > p {
+  font-size: 20px;
 }
 
 /* =-------------------------------------------------------------------= */
@@ -164,18 +169,18 @@ main {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
-  max-width: 600px;
+  max-width: 1000px;
   margin: 20px auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #create-post-form textarea {
-  width: 100%;
-  height: 100px;
+  width: 95%;
+  height: 80px;
   border-radius: 5px;
   border: 1px solid #ccc;
   padding: 10px;
-  font-size: 14px;
+  font-size: 18px;
   margin-bottom: 10px;
 }
 
@@ -185,10 +190,20 @@ main {
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
+  font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 #create-post-form button:hover {
   background-color: #357ab7;
+}
+
+/* ----------- */
+#edit {
+  background-color: green;
+}
+
+#delete {
+  background-color: lightcoral;
 }
